--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -135,32 +135,54 @@ a:hover {
   padding: 10px 0;
 }
 /* line 21, ../scss/components/_sideBar.scss */
-.sideBar .sideBar-left a.active, .sideBar .sideBar-left a:hover {
+.sideBar .sideBar-left a.active {
   color: #33CC99;
 }
-/* line 24, ../scss/components/_sideBar.scss */
+/* line 23, ../scss/components/_sideBar.scss */
+.sideBar .sideBar-left a.active .triangle-left {
+  display: block !important;
+}
+/* line 27, ../scss/components/_sideBar.scss */
+.sideBar .sideBar-left a:hover {
+  color: #33CC99;
+}
+/* line 30, ../scss/components/_sideBar.scss */
 .sideBar .sideBar-left a .icon-item {
+  position: relative;
   width: 100%;
   font-size: 28px;
   margin: 10px 0;
 }
-/* line 32, ../scss/components/_sideBar.scss */
+/* line 35, ../scss/components/_sideBar.scss */
+.sideBar .sideBar-left a .icon-item .triangle-left {
+  display: none;
+  position: absolute;
+  top: calc(50% - 10px);
+  right: 0;
+  height: 0;
+  width: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 10px;
+  border-right-color: #CCCCCC;
+}
+/* line 43, ../scss/components/_sideBar.scss */
 .sideBar .sideBar-left a .menu-title {
   font-size: 12px;
 }
-/* line 37, ../scss/components/_sideBar.scss */
+/* line 48, ../scss/components/_sideBar.scss */
 .sideBar .sideBar-right {
   float: left;
   width: 380px;
   height: 100%;
   background-color: #CCCCCC;
 }
-/* line 42, ../scss/components/_sideBar.scss */
+/* line 53, ../scss/components/_sideBar.scss */
 .sideBar .sideBar-right .searchBox {
   position: relative;
   height: 64px;
 }
-/* line 45, ../scss/components/_sideBar.scss */
+/* line 56, ../scss/components/_sideBar.scss */
 .sideBar .sideBar-right .searchBox .icon-search {
   position: absolute;
   top: 0;
@@ -168,7 +190,7 @@ a:hover {
   font-size: 24px;
   line-height: 64px;
 }
-/* line 52, ../scss/components/_sideBar.scss */
+/* line 63, ../scss/components/_sideBar.scss */
 .sideBar .sideBar-right .searchBox #search-input {
   width: 100%;
   height: 100%;
@@ -178,19 +200,19 @@ a:hover {
   border: none;
   outline: none;
 }
-/* line 62, ../scss/components/_sideBar.scss */
-.sideBar .sideBar-right nav {
-  padding-top: 15px;
-}
-/* line 64, ../scss/components/_sideBar.scss */
+/* line 74, ../scss/components/_sideBar.scss */
 .sideBar .sideBar-right nav .item-link {
-  margin: 5px 0;
+  margin: 10px 0;
   padding: 0 15px 0 32px;
   font-size: 16px;
   line-height: 22px;
   white-space: nowrap;
   display: block;
   color: #474747;
+}
+/* line 75, ../scss/components/_sideBar.scss */
+.sideBar .sideBar-right nav .item-link:first-child {
+  margin-top: 30px;
 }
 
 /* line 1, ../scss/pages/_angular.scss */
