--- a/app/scss/common/_global.scss
+++ b/app/scss/common/_global.scss
@@ -1,6 +1,6 @@
 body {
 	font-size: 14px;
-	font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: "Segoe UI", "Lucida Grande", Helvetica, Arial, "Microsoft YaHei", FreeSans, Arimo, "Droid Sans", "wenquanyi micro hei", "Hiragino Sans GB", "Hiragino Sans GB W3", "FontAwesome", sans-serif;
 	color: $white;
 	background-color: $gray;
 }
@@ -17,4 +17,9 @@ a {
 .main {
 	box-shadow: 0 4px 10px rgba(0,0,0,.1);
 	background-color: $white;
+	main iframe {
+		width: calc(100% - 460px);
+		height: calc(100% - 50px);
+		position: absolute;
+	}
 }
