--- a/app/scss/components/_sideBar.scss
+++ b/app/scss/components/_sideBar.scss
@@ -70,18 +70,27 @@
 				outline: none;
 			}
 		}
-		nav {
-			.item-link {
-				&:first-child {
-					margin-top: 30px;
-				}
-				margin: 10px 0;
-				padding: 0 15px 0 32px;
-				font-size: 16px;
-				line-height: 22px;
-				white-space: nowrap;
-				display: block;
-				color: $black;
+		.item-link {
+			margin: 10px 0;
+			padding: 0 15px 0 32px;
+			font-size: 16px;
+			line-height: 22px;
+			white-space: nowrap;
+			display: block;
+			color: $black;
+			font-weight: bold;
+
+			&:first-child {
+				margin-top: 30px;
+			}
+			&:hover, &.active {
+				color: #009966;
+				font-weight: bold;
+			}
+			.item-link-icon {
+				color: #009966;
+				font-size: 13px;
+				line-height: 16px;
 			}
 		}
 	}
